--- a/index.html
+++ b/index.html
@@ -5,48 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Popup Login Form</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
+
   <body>
     <div id="container">
-      <!-- <a href="a" class='btn'>Log in</a> -->
-      <button id="Log In" class="btn">Log in</button>
+      <button id="Log-in" class="open-btn">Log in</button>
     </div>
-    <!-- <div class='popup-form'>
-    <div class='close-btn'>&times;</div>
+    <div class="form" id="popup-form" validate()>
+      <div id="exist" class="close-btn">&times;</div>
 
-  </div> -->
-
-    <!-- <div class='form'>
-    <h1>Log In</h1> -->
-    <div class="form">
-      <div class="close-btn">&times;</div>
-
-      <form id="Login-form" action="">
+      <form id="Login-form" name="myLogin" action="">
         <h2>Log In</h2>
         <h3>Existing Customer</h3>
-        <label for="name">User name*</label>
-        <input
-          type="text"
-          id="user name"
-          placeholder="please enter your user name"
-        />
+        <label for="username">User name*</label>
+        <input type="text" id="user-name" placeholder="Enter Username" />
         <br />
         <label for="email">Email*</label>
-        <input type="email" id="email" placeholder="enter password" />
+        <input type="email" id="email" placeholder="Enter Email" />
         <br />
         <label for="password">Password*</label>
-        <input type="password" id="password" placeholder="enter password" />
+        <input
+          type="password"
+          id="psw"
+          name="psw"
+          placeholder="Enter Password"
+        />
         <br />
-
-        <!-- </div> -->
         <input type="checkbox" id="Remember me" />
         <label for="Remember me">Remember me</label>
         <br />
         <a href="">Forgot password?</a>
-
         <div>
-          <button class="submit">Sign In</button>
+          <button type="submit" class="submit">Login</button>
         </div>
 
         <div>
@@ -55,6 +46,6 @@
       </form>
     </div>
 
-    <script src="app.js"></script>
+    <script src="./app.js"></script>
   </body>
 </html>
